refactor: 요약 생성 프롬프트 수정